--- a/cart.html
+++ b/cart.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Bag | SSENSE</title>
 
-    <link rel="stylesheet" href="./Styles/navbar.css" />
-    <link rel="stylesheet" href="./Styles/footer.css" />
-    <link rel="stylesheet" href="./Styles/cart.css" />
+    <link rel="stylesheet" href="./styles/navbar.css" />
+    <link rel="stylesheet" href="./styles/footer.css" />
+    <link rel="stylesheet" href="./styles/cart.css" />
 
 
 </head>
