--- a/mens.html
+++ b/mens.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Designer Clothes, Shoes & Bags for Men | SSENSE</title>
 
-    <link rel="stylesheet" href="./Styles/navbar.css" />
-    <link rel="stylesheet" href="./Styles/footer.css" />
-    <link rel="stylesheet" href="./Styles/mens.css" />
+    <link rel="stylesheet" href="./styles/navbar.css" />
+    <link rel="stylesheet" href="./styles/footer.css" />
+    <link rel="stylesheet" href="./styles/mens.css" />
 
 
     
