--- a/signup.html
+++ b/signup.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIGNUP | SSENSE</title>
 
-    <link rel="stylesheet" href="./Styles/navbar.css" />
-    <link rel="stylesheet" href="./Styles/footer.css" />
-    <link rel="stylesheet" href="./Styles/cart.css" />
-    <link rel="stylesheet" href="./Styles/sigup.css" />
+    <link rel="stylesheet" href="./styles/navbar.css" />
+    <link rel="stylesheet" href="./styles/footer.css" />
+    <link rel="stylesheet" href="./styles/cart.css" />
+    <link rel="stylesheet" href="./styles/sigup.css" />
 
 
 
